--- a/.firebaserc
+++ b/.firebaserc
@@ -6,7 +6,7 @@
     "theawakening-zg": {
       "hosting": {
         "diet-planner": [
-          "default"
+          "diet-planner"
         ]
       }
     }
