--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,19 @@
   "name": "Diet Planner",
   "icons": [
     {
-      "src": "favicon.ico",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "/favicon.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "favicon.ico",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/favicon512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/favicon.ico",
+      "sizes": "48x48",
+      "type": "image/x-icon"
     }
   ],
   "start_url": "/",
