--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.0",
     "embla-carousel-react": "^8.6.0",
     "fuse.js": "^7.1.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
